# Advanced-Programming-Project3

./: CMakeLists.txt  Player.cpp  Player.h  README.md  SkierSnowboarder.cpp  SkierSnowboarder.h  VTMountain.cpp  VTMountain.h  VermontSkiMountains.csv  critic.cpp  critic.h  highscore.csv  main.cpp  testing.cpp
